# frosted

./: Cargo.toml  README.md  flake.nix  template.dart.handlebars
src/: main.rs  types.rs
src/generate/: mod.rs
src/parse/: mod.rs
templates/: main.dart.handlebars
test/: 1.sexp  in1.copy.gen.dart  in1.dart  in2.model.copy.gen.dart  in2.model.dart
